# qwc-data-service

./: Dockerfile  Dockerfile.mssql  README.md  attachments_service.py  clamav.py  data_service.py  dataset_features_provider.py  pyproject.toml  requirements.txt  server.py  server.wsgi  test.py  utils.py
.github/workflows/: main.yml
schemas/: qwc-data-service.json
scripts/: translateui.sh
src/: attachments_service.py  data_service.py  dataset_features_provider.py  dataset_features_provider_base.py  dataset_features_provider_factory.py  dataset_features_provider_mssql.py  dataset_features_provider_postgres.py  server.py  spatial_adapter.py
src/translations/: de.json  en.json  fr.json  it.json
tests/: api_tests.py  feature_validation_tests.py  feature_validation_tests_somap.py  patch_permissions.py
translations/: fr.json  it.json
