[project]
name = "qwc-data-service"
version = "v2026.01.06"
description = "QWC Data Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.1.0",
    "Werkzeug~=3.1.4",
    "Flask-JWT-Extended~=4.7.0",
    "flask-restx~=1.3.0",
    "psycopg2~=2.9.9",
    "requests~=2.32.0",
    "SQLAlchemy~=2.0.29",
    "clamd~=1.0.2",
    "qwc-services-core~=1.5.0"
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
